welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:7: error: not found: value nbpas
			for (nbPas2 <- nbpas to 0){
                                       ^